--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
             <nav class="navigationLinks" id="navigationLinks">
                 <ul>
-                    <li><a href="#">Om Limovia</a></li>
-                    <li><a href="#">Våra Tjänster</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Flotta</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#aboutLimovia">Om Limovia</a></li>
+                    <li><a href="#ourServices">Våra Tjänster</a></li>
+                    <li><a href="#FAQ">FAQ</a></li>
+                    <li><a href="#fleet">Flotta</a></li>
+                    <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </nav>
 
@@ -155,7 +155,7 @@
 
         </section>
 
-        <section class="aboutLimoviaHeroImage">
+        <section class="aboutLimoviaHeroImage" id="aboutLimovia">
             <div class="aboutLimoviaHeroText">
                 <h1 class="aboutLimoviaHeroTitle">Om oss</h1>
                 <p class="aboutLimoviaHeroParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
@@ -202,7 +202,7 @@
 
         </section>
 
-        <section class="ourServices">
+        <section class="ourServices" id="ourServices">
 
             <div class="ourServicesTitle">
                 <h1>Våra Tjänster</h1>
@@ -327,7 +327,7 @@
 
         </section>
 
-        <section class="commonQuestionsHeroImage">
+        <section class="commonQuestionsHeroImage" id="FAQ">
             <div class="commonQuestionsHeroText">
                 <h1 class="commonQuestionsHeroTitle">Allt du behöver veta</h1>
                 <p class="commonQuestionsHeroParagraph">Här hittar du svaren.</p>
@@ -367,7 +367,7 @@
 
         </section>
 
-        <section class="carFleet">
+        <section class="carFleet" id="fleet">
 
             <div class="fleetSlideWrapper">
 
@@ -781,12 +781,13 @@
 
         </section>
 
-        <section class="mapForContact"></section>
-        <div class="contactMap">
-            <img src="IMAGES/ContactMap.png" alt="Contact Map">
-        </div>
+        <section class="mapForContact">
+            <div class="contactMap">
+                <img src="IMAGES/ContactMap.png" alt="Contact Map">
+            </div>
+        </section>
 
-        <section class="contact">
+        <section class="contact" id="contact">
 
             <div class="contactTitle">
                 <h1>Hör av dig vid frågor och funderingar!</h1>
@@ -850,7 +851,8 @@
                 <div class="contactRight">
 
                     <div class="contactRightText">
-                        <p>Använd formuläret nedan för att kontakta oss om du vill veta mer om Limovia. Eller ring oss på
+                        <p>Använd formuläret nedan för att kontakta oss om du vill veta mer om Limovia. Eller ring oss
+                            på
                             08 777 83 47.</p>
                     </div>
 
