--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="login">
                 <ul>
-                    <li><a href="#">Logga In</a></li>
+                    <li><a href="logIn.html">Logga In</a></li>
                     <li><a href="#">Bli medlem</a></li>
                 </ul>
             </div>
