--- a/signUp.html
+++ b/signUp.html
@@ -7,10 +7,9 @@
     <meta name="description"
         content="Limovia grundad 2023, är ett lokalt företag som erbjuder privata chaufförer dygnet runt.">
 
-    <title>Limovia | Logga In</title>
+    <title>Limovia | Bli Medlem</title>
     <link rel="shortcut icon" href="LOGOS/LimoviaFavicon.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="CSS/logIn.css">
     <link rel="stylesheet" href="CSS/mediaQueries.css">
 
     <!--  Raleway  -->
@@ -86,7 +85,7 @@
                         <div class="loginInputRow signUp">
                             <span>Har du inget Limovia-konto?</span>
                             <ul>
-                                <li><a href="signUp.html">Bli Medlem</a></li>
+                                <li><a href="#">Bli Medlem</a></li>
                             </ul>
                         </div>
                     </form>
