--- a/signUp.html
+++ b/signUp.html
@@ -60,7 +60,7 @@
 
                     <form>
                 
-                        <div class="select-wheel">
+                        <div class="selectWheelTitle">
                             <select>
                                 <option value="" disabled selected>Title*</option>
                                 <option value="option1">Mr.</option>
@@ -93,22 +93,21 @@
 
                         <div class="signUpInputRow">
                             <div class="signUpInputGroup">
-                                <div class="regionContainer">
-                                    <label>Region*</label>
-                                    <select id="region" name="region">
-                                        <option value="allRegion"></option>
-                                        <option value="regionStockholm">Stockholms Län</option>
-                                        <option value="regionVästerås">Uppsala Län</option>
-                                        <option value="regionVäst">Västmanlands Län</option>
-                                        <option value="regionVäst">Södermanlands Län</option>
-                                        <option value="region">Örebro Län</option>
-                                        <option value="region">Värmlands Län</option>
-                                        <option value="region">Västra Gotlands Län</option>
-                                        <option value="region">Hallands Län</option>
-                                        <option value="region">Östergötlands Län</option>
-                                        <option value="region">Jönköpings Län</option>
-                                        <option value="region">Kronobergs Län</option>
-                                        <option value="region">Kalmar Län</option>
+                                <div class="selectWheelRegion">
+                                    <select>
+                                        <option value="" disabled selected>Region*</option>
+                                        <option value="option1">Hallands Län</option>
+                                        <option value="option2">Jönköpings Län</option>
+                                        <option value="option3">Kalmar Län</option>
+                                        <option value="option4">Kronobergs Län</option>
+                                        <option value="option5">Stockholms Län</option>
+                                        <option value="option6">Södermanlands Län</option>
+                                        <option value="option7">Uppsala Län</option>
+                                        <option value="option8">Värmlands Län</option>
+                                        <option value="option9">Västmanlands Län</option>
+                                        <option value="option10">Västra Gotlands Län</option>
+                                        <option value="option11">Örebros Län</option>
+                                        <option value="option12">Östergötlands Län</option>
                                     </select>
                                 </div>
                                 <input type="text" placeholder="Adress*" name="address" required autocomplete="off">
