--- a/signUp.html
+++ b/signUp.html
@@ -59,7 +59,7 @@
                 <div class="signUpForm">
 
                     <form>
-                
+
                         <div class="selectWheelTitle">
                             <select>
                                 <option value="" disabled selected>Title*</option>
@@ -122,11 +122,11 @@
                             </div>
                         </div>
 
-                        <div class="signUpInputRow">
+                        <div class="signUpInputRow signUpButton">
                             <button type="submit">Skapa Konto</i></i></button>
                         </div>
 
-                        <div class="signUpInputRow">
+                        <div class="signUpInputRow logIn">
                             <span>Har du redan ett konto?</span>
                             <ul>
                                 <li><a href="logIn.html">Logga In</a></li>
@@ -179,7 +179,7 @@
                             <button type="submit">Skapa Konto</i></i></button>
                         </div>
 
-                        <div class="signUpInputRow">
+                        <div class="signUpInputRow logIn">
                             <span>Har du redan ett företagskonto?</span>
                             <ul>
                                 <li><a href="logIn.html">Logga In</a></li>
