--- a/signUp.html
+++ b/signUp.html
@@ -61,7 +61,7 @@
                     <form>
 
                         <div class="selectWheelTitle">
-                            <select>
+                            <select required>
                                 <option value="" disabled selected>Title*</option>
                                 <option value="option1">Mr.</option>
                                 <option value="option2">Ms.</option>
@@ -94,7 +94,7 @@
                         <div class="signUpInputRow">
                             <div class="signUpInputGroup">
                                 <div class="selectWheelRegion">
-                                    <select>
+                                    <select required>
                                         <option value="" disabled selected>Region*</option>
                                         <option value="option1">Hallands Län</option>
                                         <option value="option2">Jönköpings Län</option>
