--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="login">
                 <ul>
                     <li><a href="logIn.html">Logga In</a></li>
-                    <li><a href="#">Bli medlem</a></li>
+                    <li><a href="signUp.html">Bli medlem</a></li>
                 </ul>
             </div>
 
