--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     
     <script defer src="JS/quoteSlide.js"></script>
     <script defer src="JS/fleetSlide.js"></script>
+    <script defer src="JS/scroll.js"></script>
     <!--<script defer src="JS/menu.js"></script>-->
 
 
@@ -153,7 +154,7 @@
 
         </section>
 
-        <section class="aboutLimoviaHeroImage" id="aboutLimovia">
+        <section class="aboutLimoviaHeroImage" id="aboutLimovia" data-offset="120">
             <div class="aboutLimoviaHeroText">
                 <h1 class="aboutLimoviaHeroTitle">Om oss</h1>
                 <p class="aboutLimoviaHeroParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
@@ -200,7 +201,7 @@
 
         </section>
 
-        <section class="ourServices" id="ourServices">
+        <section class="ourServices" id="ourServices" data-offset="40">
 
             <div class="ourServicesTitle">
                 <h1>Våra Tjänster</h1>
@@ -325,7 +326,7 @@
 
         </section>
 
-        <section class="commonQuestionsHeroImage" id="FAQ">
+        <section class="commonQuestionsHeroImage" id="FAQ" data-offset="71">
             <div class="commonQuestionsHeroText">
                 <h1 class="commonQuestionsHeroTitle">Allt du behöver veta</h1>
                 <p class="commonQuestionsHeroParagraph">Här hittar du svaren.</p>
@@ -365,7 +366,7 @@
 
         </section>
 
-        <section class="carFleet" id="fleet">
+        <section class="carFleet" id="fleet" data-offset="200">
 
             <div class="fleetSlideWrapper">
 
@@ -785,7 +786,7 @@
             </div>
         </section>
 
-        <section class="contact" id="contact">
+        <section class="contact" id="contact" data-offset="70">
 
             <div class="contactTitle">
                 <h1>Hör av dig vid frågor och funderingar!</h1>
