--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 </head>
 
 <body>
-    <header>
+    <header id="top">
         <div class="navigation" id="navigation">
 
             <div class="logo">
                 <ul>
-                    <li><a href="#">
+                    <li><a href="#top">
                             <h1>Limovia</h1>
                         </a></li>
                 </ul>
@@ -201,7 +201,7 @@
 
         </section>
 
-        <section class="ourServices" id="ourServices" data-offset="40">
+        <section class="ourServices" id="ourServices" data-offset="100">
 
             <div class="ourServicesTitle">
                 <h1>Våra Tjänster</h1>
@@ -904,7 +904,7 @@
         <div class="footerContent">
 
             <div class="footerLeft">
-                <span class="footerLogo"><a href="#">
+                <span class="footerLogo"><a href="#top">
                         <h3>Limovia</h3>
                     </a></span>
                 <p>&copy; 2024 Limovia Ltd</p>
