--- a/signUp.html
+++ b/signUp.html
@@ -60,12 +60,15 @@
 
                     <form>
 
-                        <div class="selectWheelTitle">
-                            <select required>
-                                <option value="" disabled selected>Title*</option>
-                                <option value="option1">Mr.</option>
-                                <option value="option2">Ms.</option>
-                            </select>
+                        
+                        <div class="signUpInputRow">
+                            <div class="selectWheelTitle">
+                                <select required>
+                                    <option value="" disabled selected>Title*</option>
+                                    <option value="option1">Mr.</option>
+                                    <option value="option2">Ms.</option>
+                                </select>
+                            </div>
                         </div>
 
                         <div class="signUpInputRow">
